--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Navigation from '../components/Navigation.astro';
+
 export interface Props {
 	title: string;
 }
@@ -17,17 +19,19 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
+        <Navigation />
 		<slot />
 	</body>
 </html>
 <style is:global>
+    @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;400;800&display=swap');
 	:root {
 		--accent: 124, 58, 237;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
+        font-family: 'Work Sans', sans-serif;		
+        background-color: #F6F6F6;
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
