--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Navigation from '../components/navigation/Navigation.astro';
+import Footer from '../components/navigation/Footer.astro';
 
 export interface Props {
 	title: string;
@@ -21,6 +22,7 @@ const { title } = Astro.props;
 	<body>
         <Navigation />
 		<slot />
+        <Footer />
 	</body>
 </html>
 <style is:global>
@@ -28,6 +30,11 @@ const { title } = Astro.props;
 	:root {
 		--accent: 124, 58, 237;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
+        --tummanvihrea: #384d48ff;
+        --harmaa: #6e7271ff;
+        --hiekka: #acad94ff;
+        --ruskeaharmaa: #d8d4d5ff;
+        --vaaleanharmaa: #e2e2e2ff;
 	}
 	html {
         font-family: 'Work Sans', sans-serif;		
