--- a/src/components/common/Button.astro
+++ b/src/components/common/Button.astro
@@ -1,12 +1,14 @@
 ---
-const { text, backgroundColor } = Astro.props
+const { text, backgroundColor, href } = Astro.props
 ---
 
-<div class="button">
-    <span>{text || 'Paina tästä!'}</span>
-</div>
+<a href={href}>
+    <div class="button">
+        <span>{text || 'Paina tästä!'}</span>
+    </div>
+</a>
 
-<style define:vars={{backgroundColor}}>
+<style define:vars={{ backgroundColor }}>
     .button {
         display: inline-block;
         border: 1px solid var(--ruskeaharmaa);
