--- a/src/components/mainPage/Hero.astro
+++ b/src/components/mainPage/Hero.astro
@@ -1,6 +1,38 @@
 ---
-
+import Button from '../common/Button.astro'
+import { Image } from 'astro:assets';
+import tyovuorolista_hero from '../../assets/tyovuorolista_hero.png'
 ---
 
-<h1>Ravintolan työvuorolistan teko helpommin ja nopeammin</h1>
-<h3>Rekisteröidy, tee työvuorolista ja julkaise se alta viiden minuutin!</h3>
+<div class="hero">
+    <h1>Ravintolan työvuorolista nopeasti ja helposti</h1>
+    <div class="heroImage">
+        <Image src={tyovuorolista_hero} alt="Työvuorolista" width={600} />
+    </div>
+    <h3>Rekisteröidy, tee työvuorolista ja julkaise se alta viiden minuutin!</h3>
+    <span>
+        <Button text="Rekisteröidy" backgroundColor="var(--hiekka)" /> 
+        <span style="color: var(--harmaa);">TAI</span>
+        <Button text="Ota yhteyttä" backgroundColor="var(--ruskeaharmaa)" href="./yhteystiedot" />
+    </span> 
+</div>
+
+<style>
+    .hero {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        text-wrap: balance;
+    }
+    .heroImage {
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+        font-size: 80px;
+    }
+    h3 {
+        font-size: 30px;
+        max-width: 80%;
+    }
+</style>
