--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -8,7 +8,7 @@ const currentYear = new Date().getFullYear();
 <style>
     .footer {
         width: 100%;
-        position: fixed;
+        position: relative;
         bottom: 0;
         left: 0;
         text-align: center;
