--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -30,6 +30,7 @@ import Button from '../common/Button.astro'
         justify-content: space-between;
         align-items: center;
         padding: 1rem 2rem;
+        margin: 0;
         background-color: white;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
