--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro'
+import Hero from '../components/mainPage/Hero.astro'
 ---
 
 <Layout title="Welcome to Astro.">
     <main>
-        <h1>Tähän tulee sisältö</h1>
+        <Hero />
     </main>
 </Layout>
 
@@ -12,7 +13,9 @@ import Layout from '../layouts/Layout.astro'
     main {
         margin: auto;
         padding: 1.5rem;
-        max-width: 60ch;
+        max-width: 800px;
+        display: flex;
+        flex-direction: column;
     }
     h1 {
         font-size: 3rem;
