--- a/src/components/common/Button.astro
+++ b/src/components/common/Button.astro
@@ -28,6 +28,12 @@ const { text, backgroundColor, href } = Astro.props
     span {
         color: #333;
         font-size: 1.2em;
-        text-transform: capitalize;
+    }
+    @media (max-width: 620px) {
+        .button {
+            padding: 0.5rem;
+            margin: 0.5rem;
+        }
     }
 </style>
+
