--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -6,7 +6,7 @@ import Button from '../common/Button.astro'
     <div>
         <a href="./" class="navLink">Työvuorolista {/*TODO: Tähän logo*/}</a>
     </div>
-    <div>
+    <div class="navRight">
         <a href=""><Button text="Rekisteröidy" backgroundColor="var(--hiekka)"/></a>
         <a href=""><Button text="Kirjaudu" /></a>
         <a href="" class="navLink">Hinnoittelu</a>
@@ -17,6 +17,8 @@ import Button from '../common/Button.astro'
     .navLink {
         color: black;
         text-decoration: none;
+        margin-right: 1rem;
+
     }
     .navLink:hover {
         border-bottom: 1px solid var(--harmaa);
@@ -33,5 +35,12 @@ import Button from '../common/Button.astro'
         margin: 0;
         background-color: white;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    @media (max-width: 620px) {
+        .navRight {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+        }
     }
 </style>
