--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,4 +44,11 @@ const { title } = Astro.props;
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
 			Bitstream Vera Sans Mono, Courier New, monospace;
 	}
+    body {
+        margin: 0;
+        padding: 0;
+    }
+    h1, h2, h3, h4, h5, h6 {
+        text-wrap: balance;
+    }
 </style>
