--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -2,16 +2,21 @@
 const currentYear = new Date().getFullYear();
 ---
 <div class="footer">
-    <h3>Työvuorolista, {currentYear}</h3>
+    <h3>Työvuorolista | tyovuorolista.fi | {currentYear}</h3>
 </div>
 
 <style>
     .footer {
         width: 100%;
+        height: 5rem;
         position: relative;
         bottom: 0;
         left: 0;
         text-align: center;
         background-color: var(--vaaleanharmaa);
+        margin-top: 5rem;
+    }
+    h3 {
+        padding: 2rem;
     }
 </style>
