--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -51,4 +51,9 @@ const { title } = Astro.props;
     h1, h2, h3, h4, h5, h6 {
         text-wrap: balance;
     }
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 </style>
