--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro'
 import Hero from '../components/mainPage/Hero.astro'
+import DemoVideo from '../components/mainPage/DemoVideo.astro'
 ---
 
 <Layout title="Welcome to Astro.">
     <main>
         <Hero />
+        <DemoVideo />
     </main>
 </Layout>
 
