Customer story component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,14 @@
 import Layout from '../layouts/Layout.astro'
 import Hero from '../components/mainPage/Hero.astro'
 import DemoVideo from '../components/mainPage/DemoVideo.astro'
+import CustomerStory from '../components/mainPage/CustomerStory.astro'
 ---
 
 <Layout title="Welcome to Astro.">
     <main>
         <Hero />
         <DemoVideo />
+        <CustomerStory />
     </main>
 </Layout>
 
