--- a/src/components/mainPage/CustomerStory.astro
+++ b/src/components/mainPage/CustomerStory.astro
@@ -16,6 +16,7 @@ import Antti_Tuomola from '../../assets/Antti_Tuomola.jpg'
 <style>
     img {
         object-fit: cover;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
     .customerStory {
         margin-top: 6rem;
