--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Layout from '../layouts/Layout.astro'
 import Hero from '../components/mainPage/Hero.astro'
 import DemoVideo from '../components/mainPage/DemoVideo.astro'
 import CustomerStory from '../components/mainPage/CustomerStory.astro'
+import Register from '../components/mainPage/Register.astro'
 ---
 
 <Layout title="Welcome to Astro.">
@@ -10,6 +11,7 @@ import CustomerStory from '../components/mainPage/CustomerStory.astro'
         <Hero />
         <DemoVideo />
         <CustomerStory />
+        <Register />
     </main>
 </Layout>
 
