--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,5 +55,6 @@ const { title } = Astro.props;
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-top: 6rem;
     }
 </style>
