initial form + rest of the steps

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Hero from '../components/mainPage/Hero.astro'
 import DemoVideo from '../components/mainPage/DemoVideo.astro'
 import CustomerStory from '../components/mainPage/CustomerStory.astro'
 import Register from '../components/mainPage/Register.astro'
+import ContactForm from '../components/mainPage/ContactForm.astro'
 ---
 
 <Layout title="Welcome to Astro.">
@@ -12,6 +13,7 @@ import Register from '../components/mainPage/Register.astro'
         <DemoVideo />
         <CustomerStory />
         <Register />
+        <ContactForm />
     </main>
 </Layout>
 
