--- a/src/components/mainPage/Register.astro
+++ b/src/components/mainPage/Register.astro
@@ -1,9 +1,13 @@
 ---
 import { Icon } from 'astro-icon'
 import register from '../../assets/register.png'
+import suunnittele from '../../assets/suunnittele.png'
+import hyvaksyta from '../../assets/hyvaksyta.png'
+import julkaise from '../../assets/julkaise.png'
 import { Image } from 'astro:assets'
 ---
 
+<!-- REKISTERÖIDY -->
 <div class="wrapper">
     <div class="textAndImage">
         <div class="text">
@@ -29,7 +33,93 @@ import { Image } from 'astro:assets'
             </div>
         </div>
         <div class="image">
-            <Image src={register} alt="Rekisteröitymissivu" height={300}/>
+            <Image src={register} alt="Rekisteröitymissivu" height={300} />
+        </div>
+    </div>
+</div>
+
+<!-- SUUNNITTELE -->
+<div class="wrapper">
+    <div class="textAndImage">
+        <div class="image">
+            <Image src={suunnittele} alt="Rekisteröitymissivu" height={300} />
+        </div>
+        <div class="text">
+            <div class="title">
+                <span class="numberedBox">2</span>
+                <h2>Suunnittele</h2>
+            </div>
+            <p>
+                Ravintolan ja työntekijöiden lisääminen vie muutaman minuutin. Pääset heti tekemään ensimmäistä työvuorolistaasi.
+            </p>
+            <div class="step">
+                <Icon name="ic:baseline-check" class="icon" />
+                <p><strong>Ei turhaa tietojen syöttöä:</strong> sovellus kysyy vain tarvittavat tiedot, eli käytännössä nimen ja sähköpostin. Ei muuta.</p>
+            </div>
+            <div class="step">
+                <Icon name="ic:baseline-check" class="icon" />
+                <p><strong>Ei turhaa näpyttelyä:</strong> työvuorot lisätään kalenteriin raahaamalla tekijä oikeaan kohtaan. Vuorojen pituutta ja sijaintia voi myös säätää raahaamalla.</p>
+            </div>
+            <div class="step">
+                <Icon name="ic:baseline-check" class="icon" />
+                <p><strong>Tarvittavat lisätiedot:</strong> työvuoroihin voi helposti lisätä kommentteja, esim. "anniskeluvastaava".</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- HYVÄKSYTÄ -->
+<div class="wrapper">
+    <div class="textAndImage">
+        <div class="text">
+            <div class="title">
+                <span class="numberedBox">3</span>
+                <h2>Hyväksytä</h2>
+            </div>
+            <p>
+                Jaa työvuorosuunnitelma vaivattomasti ja nopeasti haluamassasi kanavassa työntekijöiden kanssa ja pyydä kommentit ennen julkaisua.
+            </p>
+            <div class="step">
+                <Icon name="ic:baseline-check" class="icon" />
+                <p><strong>Kopioi kuva työvuorolistasta:</strong> voit liittää sen helposti vaikka whatsapp-viestiin.</p>
+            </div>
+            <div class="step">
+                <Icon name="ic:baseline-check" class="icon" />
+                <p><strong>Tallenna kuva työvuorolistasta:</strong> voit liittää sen helposti sähköpostin liitetiedostoksi.</p>
+            </div>
+        </div>
+        <div class="image">
+            <Image src={hyvaksyta} alt="Rekisteröitymissivu" width={300} />
+        </div>
+    </div>
+</div>
+
+<!-- HYVÄKSYTÄ -->
+<div class="wrapper">
+    <div class="textAndImage">
+        <div class="image">
+            <Image src={julkaise} alt="Rekisteröitymissivu" height={300} />
+        </div>
+        <div class="text">
+            <div class="title">
+                <span class="numberedBox">4</span>
+                <h2>Julkaise</h2>
+            </div>
+            <p>
+                Julkaise työvuorolista yhdellä klikkauksella ja lähetä se automaattisesti työntekijöille sähköpostilla.
+            </p>
+            <div class="step">
+                <Icon name="ic:baseline-check" class="icon" />
+                <p><strong>Automatisoitu lähetys:</strong> kun julkaiset listan, se lähetetään automaattisesti ravintolasi sähköpostiosoitteesta kaikille työntekijöille, jotka ovat listalla.</p>
+            </div>
+            <div class="step">
+                <Icon name="ic:baseline-check" class="icon" />
+                <p><strong>Henkilökohtainen lista:</strong> jokaiselle työntekijälle lähtee paitsi yleinen lista, myös personoitu lista heidän omista työvuoroistaan.</p>
+            </div>
+            <div class="step">
+                <Icon name="ic:baseline-check" class="icon" />
+                <p><strong>Muillekin tiedoksi:</strong> voit halutessasi valita lähetyslistaan myös työntekijöitä, joilla ei ole listassa vuoroja.</p>
+            </div>
         </div>
     </div>
 </div>
