--- a/src/components/mainPage/ContactForm.astro
+++ b/src/components/mainPage/ContactForm.astro
@@ -1,4 +1,7 @@
 ---
+const url = Astro.request.url;
+console.log(url);
+
 if (Astro.request.method === 'POST') {
     try {
         const data = await Astro.request.formData()
@@ -9,7 +12,7 @@ if (Astro.request.method === 'POST') {
             throw new Error('Please provide either email or phone number.')
         }
 
-        const response = await fetch('https://tyovuorolista-site.vercel.app/api/handleForm', {
+        const response = await fetch(`https://tyovuorolista-site.vercel.app/api/handleForm`, {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
