--- a/src/components/common/Button.astro
+++ b/src/components/common/Button.astro
@@ -16,6 +16,8 @@ const { text, backgroundColor, href } = Astro.props
         border-radius: 4px;
         padding: 1rem;
         transition: background-color 0.3s ease;
+        min-width: 150px;
+        text-align: center;
     }
     .button:hover {
         border-color: var(--harmaa);
