--- a/src/components/mainPage/Hero.astro
+++ b/src/components/mainPage/Hero.astro
@@ -35,7 +35,7 @@ import tyovuorolista_hero from '../../assets/tyovuorolista_hero.png'
         font-size: 30px;
         max-width: 80%;
     }
-    @media (max-width: 620px) {
+    @media (max-width: 640px) {
         h1 {
             font-size: 3rem;
         }
@@ -47,5 +47,11 @@ import tyovuorolista_hero from '../../assets/tyovuorolista_hero.png'
             display: flex;
             flex-direction: column;
         }
+        @media (max-width: 640px) {
+            .buttons {
+                gap: 0.6rem;
+            }
+        }
+
     }
 </style>
