--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -19,4 +19,10 @@ const currentYear = new Date().getFullYear();
     h3 {
         padding: 2rem;
     }
+    @media (max-width: 640px) {
+        h3 {
+            font-size: 1rem;
+            padding: 1rem;
+        }
+    }
 </style>
