--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -7,18 +7,25 @@ import Button from '../common/Button.astro'
         <a href="./" class="navLink">Työvuorolista {/*TODO: Tähän logo*/}</a>
     </div>
     <div class="navRight">
-        <a href=""><Button text="Rekisteröidy" backgroundColor="var(--hiekka)"/></a>
-        <a href=""><Button text="Kirjaudu" /></a>
+        <div class="buttonContainer">
+            <Button href="" text="Rekisteröidy" backgroundColor="var(--hiekka)" />
+            <Button href="" text="Kirjaudu" />
+        </div>
         <a href="" class="navLink">Hinnoittelu</a>
     </div>
 </nav>
 
 <style>
+    .navRight {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+        margin-right: 2rem;
+    }
     .navLink {
         color: black;
         text-decoration: none;
         margin-right: 1rem;
-
     }
     .navLink:hover {
         border-bottom: 1px solid var(--harmaa);
@@ -35,12 +42,27 @@ import Button from '../common/Button.astro'
         margin: 0;
         background-color: white;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        width: 100%;
     }
-    @media (max-width: 620px) {
+    .buttonContainer {
+        display: flex;
+        gap: 1rem;
+    }
+    @media (max-width: 640px) {
         .navRight {
             display: flex;
             flex-direction: column;
             align-items: flex-end;
+            gap: 0.4rem;
+            margin-right: 1rem;
+        }
+        .buttonContainer {
+            display: flex;
+            flex-direction: column;
+            gap: 0.8rem;
+        }
+        a {
+            margin-top: 1rem;
         }
     }
 </style>
