--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -49,12 +49,16 @@ import Button from '../common/Button.astro'
         gap: 1rem;
     }
     @media (max-width: 640px) {
+        .nav {
+            margin: 0;
+            padding: 0;
+        }
         .navRight {
             display: flex;
             flex-direction: column;
             align-items: flex-end;
             gap: 0.4rem;
-            margin-right: 1rem;
+            margin: 1rem;
         }
         .buttonContainer {
             display: flex;
@@ -63,6 +67,7 @@ import Button from '../common/Button.astro'
         }
         a {
             margin-top: 1rem;
+            margin-left: 1rem;
         }
     }
 </style>
