--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -1,20 +1,22 @@
 ---
+import Button from '../common/Button.astro'
 const currentYear = new Date().getFullYear();
 ---
 <div class="footer">
+    <Button href="" text="Rekisteröidy" backgroundColor="var(--hiekka)" />
     <h3>Työvuorolista | tyovuorolista.fi | {currentYear}</h3>
 </div>
 
 <style>
     .footer {
         width: 100%;
-        height: 5rem;
         position: relative;
         bottom: 0;
         left: 0;
         text-align: center;
         background-color: var(--vaaleanharmaa);
         margin-top: 5rem;
+        padding-top: 1rem;
     }
     h3 {
         padding: 2rem;
