--- a/src/components/mainPage/CustomerStory.astro
+++ b/src/components/mainPage/CustomerStory.astro
@@ -5,7 +5,7 @@ import Antti_Tuomola from '../../assets/Antti_Tuomola.jpg'
 
 <div class="wrapper">
     <div class="customerStory">
-        <Image src={Antti_Tuomola} quality="max" height={300} alt="Placeholder image" />
+        <Image src={Antti_Tuomola} quality="max" alt="Placeholder image" />
         <div>
             <h2>"Työvuorolistan teko on ollut kyllä helppoa. Työntekijätkin kiittelevät listojen ulkoasua!</h2>
             <p>Antti Tuomola, Ravintola Pannu</p>
@@ -15,6 +15,8 @@ import Antti_Tuomola from '../../assets/Antti_Tuomola.jpg'
 
 <style>
     img {
+        max-width: 350px;
+        max-height: 300px;
         object-fit: cover;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
