--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -16,6 +16,9 @@ import Button from '../common/Button.astro'
 </nav>
 
 <style>
+    a {
+        margin-left: 1rem;
+    }
     .navRight {
         display: flex;
         align-items: center;
@@ -25,7 +28,6 @@ import Button from '../common/Button.astro'
     .navLink {
         color: black;
         text-decoration: none;
-        margin-right: 1rem;
     }
     .navLink:hover {
         border-bottom: 1px solid var(--harmaa);
@@ -38,7 +40,7 @@ import Button from '../common/Button.astro'
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: 1rem 2rem;
+        padding: 0;
         margin: 0;
         background-color: white;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -47,6 +49,7 @@ import Button from '../common/Button.astro'
     .buttonContainer {
         display: flex;
         gap: 1rem;
+        margin: 1rem;
     }
     @media (max-width: 640px) {
         .nav {
@@ -66,8 +69,7 @@ import Button from '../common/Button.astro'
             gap: 0.8rem;
         }
         a {
-            margin-top: 1rem;
-            margin-left: 1rem;
+            margin: 1rem;
         }
     }
 </style>
