--- a/src/components/mainPage/CustomerStory.astro
+++ b/src/components/mainPage/CustomerStory.astro
@@ -8,7 +8,7 @@ import Antti_Tuomola from '../../assets/Antti_Tuomola.jpg'
         <Image src={Antti_Tuomola} quality="max" alt="Placeholder image" />
         <div>
             <h2>"Työvuorolistan teko on ollut kyllä helppoa. Työntekijätkin kiittelevät listojen ulkoasua!</h2>
-            <p>Antti Tuomola, Ravintola Pannu</p>
+            <p>Laura Dahlman, Ravintola Apaja, Tampere</p>
         </div>
     </div>
 </div>
