--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import DemoVideo from '../components/mainPage/DemoVideo.astro'
 import CustomerStory from '../components/mainPage/CustomerStory.astro'
 import Register from '../components/mainPage/Register.astro'
 import ContactForm from '../components/mainPage/ContactForm.jsx'
+import Faq from '../components/mainPage/Faq.astro'
 ---
 
 <Layout title="Welcome to Astro.">
@@ -14,6 +15,7 @@ import ContactForm from '../components/mainPage/ContactForm.jsx'
         <CustomerStory />
         <Register />
         <ContactForm client:load />
+        <Faq />
     </main>
 </Layout>
 
