--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -1,10 +1,12 @@
 ---
 import Button from '../common/Button.astro'
+import { Image } from 'astro:assets';
+import logo_tekstilla from '../../assets/logo_tekstilla.png';
 ---
 
 <nav class="nav">
     <div>
-        <a href="./" class="navLink">Työvuorolista {/*TODO: Tähän logo*/}</a>
+        <a href="./" class="logo"><Image src={logo_tekstilla} alt="Logo"/></a>
     </div>
     <div class="navRight">
         <div class="buttonContainer">
@@ -51,10 +53,15 @@ import Button from '../common/Button.astro'
         gap: 1rem;
         margin: 1rem;
     }
+    img {
+        width: 150px;
+        height: 150px;
+    }
     @media (max-width: 640px) {
         .nav {
             margin: 0;
             padding: 0;
+            width: 100%;
         }
         .navRight {
             display: flex;
@@ -70,6 +77,10 @@ import Button from '../common/Button.astro'
         }
         a {
             margin: 1rem;
+        }
+        img {
+            width: 100px;
+            height: 100px;
         }
     }
 </style>
