--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,7 +9,7 @@ import Footer from '../components/navigation/Footer.astro'
         <meta charset="UTF-8" />
         <meta name="description" content="Astro description" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.png" />
         <!-- Primary Meta Tags -->
         <title>Työvuorolista.fi: ravintolan työvuorolista nopeasti ja helposti</title>
         <meta name="title" content="Työvuorolista.fi: ravintolan työvuorolista nopeasti ja helposti" />
