--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -13,7 +13,7 @@ import logo_tekstilla from '../../assets/logo_tekstilla.png';
             <Button href="" text="Rekisteröidy" backgroundColor="var(--hiekka)" />
             <Button href="" text="Kirjaudu" />
         </div>
-        <a href="" class="navLink">Hinnoittelu</a>
+        <a href="/hinnoittelu" class="navLink">Hinnoittelu</a>
     </div>
 </nav>
 
