--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import ContactForm from '../components/mainPage/ContactForm.jsx'
 import Faq from '../components/mainPage/Faq.astro'
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout>
     <main>
         <Hero />
         <DemoVideo />
