Turn off the site for now

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,9 @@ import ContactForm from '../components/mainPage/ContactForm.jsx'
 import Faq from '../components/mainPage/Faq.astro'
 ---
 
-<Layout>
+<h1>Tulossa.</h1>
+
+<!-- <Layout>
     <main>
         <Hero />
         <DemoVideo />
@@ -17,7 +19,7 @@ import Faq from '../components/mainPage/Faq.astro'
         <ContactForm client:load />
         <Faq />
     </main>
-</Layout>
+</Layout> -->
 
 <style>
     main {
