Updated links to buttons + contact page

--- a/src/components/mainPage/Faq.astro
+++ b/src/components/mainPage/Faq.astro
@@ -14,6 +14,9 @@
             <li>yli 50 työntekijää: 120 € / kk</li><br>
             Kaikkiin hintoihin lisätään alv 24%.
             </p>
+
+            <h3>Voinko kokeilla maksamatta?</h3>
+            <p>Tietysti! Alle neljän työntekijän pyörittäminen on aina ilmaista!</p>
             
             <h3>Kuinka pitkäksi aikaa pitää sitoutua?</h3>
             <p>Maksu hoidetaan kuukausi kerrallaan, ja voit koska tahansa lopettaa tilauksen. Ei mitään sitoutumisaikoja. Esimerkiksi kesäravintola voi maksaa käytöstä kesän ajan ja katkaista tilauksen talveksi.</p>
@@ -35,9 +38,9 @@
             <h3>Miten tämä eroaa MaraPlanista / Planierista / HR suunnista / jne?</h3>
             <p>Työvuorolista eroaa muista alan toimijoista mm. näillä tavoilla:
                 <li><strong>Hinnat ovat julkisesti näkyvillä:</strong> me emme pyri kynyttämään yritykseltäsi maksimaalista hintaa, vaan julkaisemme kaikki hinnat avoimesti.</li>
-                <li>Teemme ostamisen helpoksi: <strong>voit ottaa Työvuorolistan käyttöön nyt</strong>. Viidessä minuutissa. Julkaista listan vartissa. Ei yhteydenottopyyntöjä, tarjouksia, demoja, vastatarjouksia ja muuta ajanhukkaa.</li>
-                <li>Työvuorolista on niin yksinkertainen, että <strong>et tarvitse sen käyttöön koulutusta</strong>. Jos haluat, voimme käydä sen käytön yhdessä läpi, mutta minä myös luotan siihen, että osaat käyttää tätä ilman kädestäpitoa.</li>
-                <li>Vähemmän ominaisuuksia: me keskitymme vain työvuorolistan tekoon ja julkaisuun. <strong>Emme tarjoa työntekijöillesi kännykkäsovelluksia, joita he eivät halua</strong>. Voit hanskata työvuorojen raportoinnin parhaaksi katsomallasi tavalla.</li>
+                <li><strong>Voit ottaa Työvuorolistan käyttöön nyt, viidessä minuutissa.</strong> Julkaista listan vartissa. Ei yhteydenottopyyntöjä, tarjouksia, demoja, vastatarjouksia ja muuta ajanhukkaa.</li>
+                <li><strong>Työvuorolista on niin yksinkertainen, että et tarvitse sen käyttöön koulutusta</strong>. Jos haluat, voimme käydä sen käytön yhdessä läpi, mutta minä myös luotan siihen, että osaat käyttää tätä ilman kädestäpitoa.</li>
+                <li>Vähemmän ominaisuuksia: me keskitymme vain työvuorolistan tekoon, julkaisuun ja tuntien kirjaukseen. <strong>Emme tarjoa työntekijöillesi kännykkäsovelluksia, joita he eivät halua</strong>. Voit hanskata työvuorojen raportoinnin parhaaksi katsomallasi tavalla.</li>
 
             </p>
         </div>
