--- a/src/components/navigation/Footer.astro
+++ b/src/components/navigation/Footer.astro
@@ -1,9 +1,9 @@
 ---
-import Button from '../common/Button.astro'
+import RegisterButton from '../common/RegisterButton.astro';
 const currentYear = new Date().getFullYear();
 ---
 <div class="footer">
-    <Button href="" text="Rekisteröidy" backgroundColor="var(--hiekka)" />
+    <RegisterButton />
     <h3>Työvuorolista | tyovuorolista.fi | {currentYear}</h3>
 </div>
 
