--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -74,14 +74,24 @@ import RegisterButton from '../common/RegisterButton.astro'
     }
     @media (max-width: 640px) {
         .nav {
+            display: flex;
+            flex-direction: column;
             margin: 0;
             padding: 0;
             width: 100%;
+            align-items: flex-start;
+        }
+        .logo h1 {
+            font-size: 1rem;
+            margin: 0;
+        }
+        .logo h4 {
+            display: none;
         }
         .navRight {
             display: flex;
             flex-direction: column;
-            align-items: flex-end;
+            align-items: flex-start;
             gap: 0.4rem;
             margin: 1rem;
         }
