--- a/src/components/mainPage/CustomerStory.astro
+++ b/src/components/mainPage/CustomerStory.astro
@@ -1,11 +1,12 @@
 ---
 import { Image } from 'astro:assets'
 import Antti_Tuomola from '../../assets/Antti_Tuomola.jpg'
+import laura_dahlman from '../../assets/laura_dahlman.jpg'
 ---
 
 <div class="wrapper">
     <div class="customerStory">
-        <Image src={Antti_Tuomola} quality="max" alt="Placeholder image" />
+        <Image src={laura_dahlman} quality="max" alt="Placeholder image" />
         <div>
             <h2>"Työvuorolistan teko on ollut kyllä helppoa. Työntekijätkin kiittelevät listojen ulkoasua!</h2>
             <p>Laura Dahlman, Ravintola Apaja, Tampere</p>
